--- a/.github/workflows/release-on-push.yml
+++ b/.github/workflows/release-on-push.yml
@@ -1,8 +1,7 @@
-name: Build + Release (every push)
+name: Build + Release (manual)
 
 on:
-  push:
-    branches: [ main ]
+  workflow_dispatch:
 
 permissions:
   contents: write
@@ -12,60 +11,55 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  build:
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ ubuntu-latest ]
-    runs-on: ${{ matrix.os }}
+  release:
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Install deps (Linux)
-        if: runner.os == 'Linux'
+      - name: Install build dependencies
+        shell: bash
         run: |
+          set -euo pipefail
           sudo apt-get update
           sudo apt-get install -y build-essential libncurses-dev libjansson-dev
 
       - name: Build
-        run: make
-
-      - name: Package
         shell: bash
         run: |
-          chmod +x trivytui
-          mkdir -p dist
-          SHORT_SHA="${GITHUB_SHA::7}"
-          TAR="trivytui-${{ runner.os }}-${SHORT_SHA}.tar.gz"
-          tar -czf "dist/${TAR}" trivytui README.md LICENSE
+          set -euo pipefail
+          make
 
-      - name: Upload artifact for release job
-        uses: actions/upload-artifact@v4
-        with:
-          name: dist-${{ runner.os }}
-          path: dist/*.tar.gz
+      - name: Test (capture output)
+        shell: bash
+        run: |
+          set -euo pipefail
+          make test | tee test-output.txt
 
-  release:
-    needs: build
-    runs-on: ubuntu-latest
+      - name: Build packages
+        shell: bash
+        run: |
+          set -euo pipefail
+          docker run --rm \
+            -v "${{ github.workspace }}:/workspace" \
+            -w /workspace \
+            rockylinux:8.10 \
+            bash -lc "bash ./build-packages.sh"
 
-    steps:
-      - name: Download build artifacts
-        uses: actions/download-artifact@v4
-        with:
-          path: dist
-
-      - name: Create GitHub Release (unique per commit)
+      - name: Create GitHub prerelease
         uses: ncipollo/release-action@v1
         with:
-          tag: ci-${{ github.sha }}
+          tag: pre-${{ github.run_id }}
           commit: ${{ github.sha }}
-          name: CI build ${{ github.sha }}
+          name: Pre-release ${{ github.run_id }}
           prerelease: true
           makeLatest: false
           generateReleaseNotes: true
-          allowUpdates: true
-          replaceArtifacts: true
-          artifacts: "dist/**/*.tar.gz"
+          artifacts: |
+            trivytui
+            test_trivytui
+            build/SHA256SUMS
+            build/*.deb
+            build/*.rpm
+            build/*.tar.gz
